--- a/wrp.html
+++ b/wrp.html
@@ -5,10 +5,10 @@
     <BODY BGCOLOR="{{.BgColor}}">
         <FORM ACTION="/" METHOD="POST">
             <INPUT TYPE="TEXT" NAME="url" VALUE="{{.URL}}" SIZE="20">
-            <INPUT TYPE="SUBMIT" VALUE="Go">
-            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="Bk">
-            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="St">
-            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="Re">
+            <INPUT TYPE="SUBMIT" VALUE="出发">
+            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="返回">
+            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="前进">
+            <INPUT TYPE="SUBMIT" NAME="Fn" VALUE="刷新">
             W <INPUT TYPE="TEXT" NAME="w" VALUE="{{.Width}}" SIZE="4">
             H <INPUT TYPE="TEXT" NAME="h" VALUE="{{.Height}}" SIZE="4">
             Z <SELECT NAME="z">
